# game-of-life

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  clean-build.bat  conda_build_config.yaml  environment.yml  game_of_life.py  impl_numba.py  impl_numpy.py  index.html  init.py  meta.yaml  null  run_demo.bat  settings.py  setup.cfg
.github/workflows/: build.yml
conda-recipe/: bld.bat  build.sh  meta.yaml
game_of_life_demo/: __init__.py  game_of_life.py  impl_numba.py  init.py
game_of_life_demo/impl/: arg_parser.py  impl_dpnp.py  impl_numba.py  impl_numba_dpex.py  impl_numpy.py  impl_versioner.py  visualization.py
game_of_life_demo/tests/: test_grid.py  test_parser.py
noarch/: index.html
src/game_of_life_demo/: game_of_life.py  init.py
tests/: conftest.py  test_parser.py
