[versioneer]
VCS = git
style = pep440
#versionfile_source = game_of_life_demo/_version.py
#versionfile_build = game_of_life_demo/_version.py

[aliases]
test=pytest

[metadata]
name = game-of-life-demo
version = 0.1.0
author = samaid
author_email = pycoddiy@gmail.com
url = https://github.com/samaid/GameOfLife
description = Game Of Life by Conway model implemented with numpy, numba, dpnp, numba-dpex
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, demo, numba, numpy, numba-dpex, dpnp
license = BSD 2-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    numba

[options.packages.find]
where = src

#[options.entry_points]
#console_scripts =
#    my-example-utility = example.example_module:main

[options.extras_require]
notebook = cv
dev =
    black==23.1.1
    flake8==6.0.0

[options.package_data]
#example = data/schema.json, *.txt
* = README.md
